
syntax = "proto3";
package mypost;
import "google/protobuf/empty.proto";

message PostRow {
    int64 post_id=1;
    string post_path=2;
}

message Post {
  int32 id = 1;
  string title = 2;
  string cat_name = 3;
  optional string log_name = 4;  // `hasLogName()` method is generated for the optional field above
  PostRow post_property=11;
}

message PostList {
  repeated Post items_list = 1;  //  `getItemsListList()` method is generated for getting the list
}

message FilterId {
  int32 id = 1;
}

service PostService {
  rpc GetPost(google.protobuf.Empty) returns (PostList) {};
  rpc AddPost(stream Post) returns (google.protobuf.Empty) {};
  rpc FindId (FilterId) returns (stream PostList);
}
